href proyecto util

--- a/porfolio/template/eyes/proyectos.html
+++ b/porfolio/template/eyes/proyectos.html
@@ -39,8 +39,8 @@ Mis proyectos
                                     <a href="https://github.com/horacio-a/Criptoword-front" class="boton-proyectos"
                                         id="boton-CriptoWord4" style="display: none;">github</a>
 
-                                    <a href="http://criptoword.com.ar" class="boton-proyectos"
-                                        id="boton-CriptoWord5" style="display: none;">ver en la web</a>
+                                    <a href="http://criptoword.com.ar" class="boton-proyectos" id="boton-CriptoWord5"
+                                        style="display: none;">ver en la web</a>
 
                                     <div class="estructurabotones" id="botones-CriptoWord1">
                                         <div class="miniboton-proyectos"> HTML</div>
@@ -80,7 +80,8 @@ Mis proyectos
                                     <a href="https://github.com/horacio-a/Espacio-bonhomia" class="boton-proyectos"
                                         id="boton-e-commerce4" style="display: none;">github</a>
 
-                                    <a href="https://espacio-bonhomia.herokuapp.com" class="boton-proyectos" id="boton-e-commerce5" style="display: none;">ver
+                                    <a href="https://espacio-bonhomia.herokuapp.com" class="boton-proyectos"
+                                        id="boton-e-commerce5" style="display: none;">ver
                                         en la web</a>
 
                                     <div class="estructurabotones" id="botones-e-commerce1">
@@ -102,10 +103,10 @@ Mis proyectos
                     </div>
                     <div class="bloque-tecnologia-unidad ">
                         <div class="view view-tenth center-flex-j center-flex-ai">
-                            <img src='{% static "imagenes/eyes/Calculadora.png" %}' width="100%" />
+                            <img src='{% static "imagenes/eyes/512.png" %}' width="100%" />
                             <div class="mask">
                                 <div class="titulo-mask">
-                                    calculadora
+                                    Util Hub
                                 </div>
                                 <div class="conjunto-botones">
                                     <button type="button" class="boton-proyectos" id="botonCalculadora1"
@@ -118,10 +119,11 @@ Mis proyectos
                                     </button>
 
 
-                                    <a href="" class="boton-proyectos" id="botonCalculadora4"
-                                        style="display: none;">github</a>
+                                    <a href="https://github.com/horacio-a/calculadora-extencion" class="boton-proyectos"
+                                        id="botonCalculadora4" style="display: none;">github</a>
 
-                                    <a href="" class="boton-proyectos" id="botonCalculadora5" style="display: none;">ver
+                                    <a href="https://chrome.google.com/webstore/detail/calculadora/bejdbiknjfcgcllbcfgamogcefnojoak?hl=es&authuser=0"
+                                        class="boton-proyectos" id="botonCalculadora5" style="display: none;">ver
                                         en la web</a>
 
                                     <div class="estructurabotones" id="botonesCalculadora1">
@@ -153,17 +155,17 @@ Mis proyectos
                                         onclick="tecnologiaschatPriv()">
                                         Construida en...
                                     </button>
-                                    <button class="boton-proyectos" id="botonchatPriv2"
-                                        onclick=" proyectochatPriv()">
+                                    <button class="boton-proyectos" id="botonchatPriv2" onclick=" proyectochatPriv()">
                                         Ver el Proyecto
                                     </button>
 
 
-                                    
+
                                     <a href="" class="boton-proyectos" id="botonchatPriv4"
                                         style="display: none;">github</a>
 
-                                    <a href="https://chat-priv.herokuapp.com" class="boton-proyectos" id="botonchatPriv5" style="display: none;">ver
+                                    <a href="https://chat-priv.herokuapp.com" class="boton-proyectos"
+                                        id="botonchatPriv5" style="display: none;">ver
                                         en la web</a>
 
                                     <div class="estructurabotones" id="BotoneschatPriv1">
@@ -176,8 +178,8 @@ Mis proyectos
                                         <div class="miniboton-proyectos">Socket.io</div>
                                     </div>
 
-                                    <div class="miniboton-proyectos" id="botonchatPriv3"
-                                        onclick="aparecerchatPriv()" style="display: none;"> Volver</div>
+                                    <div class="miniboton-proyectos" id="botonchatPriv3" onclick="aparecerchatPriv()"
+                                        style="display: none;"> Volver</div>
 
                                 </div>
                             </div>
@@ -323,8 +325,8 @@ Mis proyectos
         <div class="bloque-proyecto">
             <div class="detalles" id="detalle-calculadora">
                 <div class="titulo-mask" style=" font-size: 1.5vh ; ">
-                    Calculadora
-                    
+                    Util hub
+
                 </div>
                 <div class="conjunto-botones">
                     <button type="button" class="boton-proyectos" id="botonCalculadora1Movil"
@@ -351,7 +353,7 @@ Mis proyectos
                         onclick="aparecerCalculadoraMovil()" style="display: none;"> Volver</div>
                 </div>
             </div>
-            <img src='{% static "imagenes/eyes/Calculadora.png" %}' height="100%" id="icon-calculadora" />
+            <img src='{% static "imagenes/eyes/512.png" %}' height="100%" id="icon-calculadora" />
         </div>
         <div class="bloque-proyecto">
             <div class="detalles" id="detalle-Chat">
@@ -366,8 +368,8 @@ Mis proyectos
                     <button class="boton-proyectos" id="botonchatPriv2Movil" onclick="proyectochatPrivMovil()">
                         Ver el Proyecto
                     </button>
-                    <a href="https://github.com/horacio-a/Chat-en-tiempo-real" class="boton-proyectos" id="botonchatPriv4Movil"
-                        style="display: none;">github</a>
+                    <a href="https://github.com/horacio-a/Chat-en-tiempo-real" class="boton-proyectos"
+                        id="botonchatPriv4Movil" style="display: none;">github</a>
                     <a href="https://chat-priv.herokuapp.com" class="boton-proyectos" id="botonchatPriv5Movil"
                         style="display: none;">ver en la web</a>
                     <div class="estructurabotones" id="BotoneschatPriv1Movil">
@@ -379,44 +381,13 @@ Mis proyectos
                         <div class="miniboton-proyectos"> Socket.io </div>
                     </div>
 
-                    <div class="miniboton-proyectos poniter" id="botonchatPriv3Movil"
-                        onclick="aparecerchatPrivMovil()" style="display: none;"> Volver</div>
+                    <div class="miniboton-proyectos poniter" id="botonchatPriv3Movil" onclick="aparecerchatPrivMovil()"
+                        style="display: none;"> Volver</div>
                 </div>
             </div>
             <img src='{% static "imagenes/eyes//Logo-chat-priv.png" %}' height="100%" id="icon-Chat" />
         </div>
-        <div class="bloque-proyecto">
-            <div class="detalles" id="detalle-Chat">
-                <div class="titulo-mask" style=" font-size: 1.5vh ; ">
-                    Chat Priv
-                </div>
-                <div class="conjunto-botones">
-                    <button type="button" class="boton-proyectos" id="botonchatPriv1Movil"
-                        onclick="tecnologiaschatPrivMovil()">
-                        Construida en...
-                    </button>
-                    <button class="boton-proyectos" id="botonchatPriv2Movil" onclick="proyectochatPrivMovil()">
-                        Ver el Proyecto
-                    </button>
-                    <a href="https://github.com/horacio-a/Chat-en-tiempo-real" class="boton-proyectos" id="botonchatPriv4Movil"
-                        style="display: none;">github</a>
-                    <a href="https://chat-priv.herokuapp.com" class="boton-proyectos" id="botonchatPriv5Movil"
-                        style="display: none;">ver en la web</a>
-                    <div class="estructurabotones" id="BotoneschatPriv1Movil">
-                        <div class="miniboton-proyectos"> HTML</div>
-                        <div class="miniboton-proyectos"> CSS</div>
-                    </div>
-                    <div class="estructurabotones" id="BotoneschatPriv2Movil">
-                        <div class="miniboton-proyectos"> node.js</div>
-                        <div class="miniboton-proyectos"> Socket.io </div>
-                    </div>
 
-                    <div class="miniboton-proyectos poniter" id="botonchatPriv3Movil"
-                        onclick="aparecerchatPrivMovil()" style="display: none;"> Volver</div>
-                </div>
-            </div>
-            <img src='{% static "imagenes/eyes//Logo-chat-priv.png" %}' height="100%" id="icon-Chat" />
-        </div>
 
     </div>
 
