--- a/porfolio/template/space/proyecto.html
+++ b/porfolio/template/space/proyecto.html
@@ -104,8 +104,8 @@
                     <div class="slider-slide">
                         <div class="proyecto1">
                             <div class="conteiner-main-proyecto">
-                                <div class="titulo-proyecto">calculadora</div>
-                                <div><img src='{% static "imagenes/space/Calculadora.png" %}' alt="" width="25%"></div>
+                                <div class="titulo-proyecto">Util Hub</div>
+                                <div><img src='{% static "imagenes/space/512.png" %}' alt="" width="25%"></div>
                             </div>
                             <div class="conteiner-main-proyecto">
                                 <div class="titulo-proyecto"> Construida con</div>
@@ -130,8 +130,8 @@
                             <div class="conteiner-main-proyecto">
                                 <div class="titulo-proyecto">Links</div>
                                 <div class="conteiner-button-proyecto">
-                                    <a class="button-proyecto">Link a github</a>
-                                    <a class="button-proyecto">Link a la web</a>
+                                    <a class="button-proyecto" href="https://github.com/horacio-a/calculadora-extencion">Link a github</a>
+                                    <a class="button-proyecto" href="https://chrome.google.com/webstore/detail/calculadora/bejdbiknjfcgcllbcfgamogcefnojoak?hl=es&authuser=0">Link a la web</a>
                                 </div>
                             </div>
 
@@ -273,8 +273,8 @@
                     <div class="slider-slide-movil">
                         <div class="proyecto1">
                             <div class="conteiner-main-proyecto" style="margin-top: 1vh;">
-                                <div class="titulo-proyecto">calculadora</div>
-                                <div><img src='{% static "imagenes/space/Calculadora.png" %}' alt="" width="25%"></div>
+                                <div class="titulo-proyecto">Util Hub</div>
+                                <div><img src='{% static "imagenes/space/512.png" %}' alt="" width="25%"></div>
                             </div>
                             <div class="conteiner-main-proyecto">
                                 <div class="titulo-proyecto"> Construida con</div>
@@ -290,8 +290,8 @@
                             <div class="conteiner-main-proyecto links">
                                 <div class="titulo-proyecto">Links</div>
                                 <div class="conteiner-button-proyecto">
-                                    <a class="button-proyecto" href="">Link a github</a>
-                                    <a class="button-proyecto" href="">Link a la web</a>
+                                    <a class="button-proyecto" href="https://github.com/horacio-a/calculadora-extencion">Link a github</a>
+                                    <a class="button-proyecto" href="https://chrome.google.com/webstore/detail/calculadora/bejdbiknjfcgcllbcfgamogcefnojoak?hl=es&authuser=0">Link a la web</a>
                                 </div>
                             </div>
 
