--- a/porfolio/template/space/proyecto.html
+++ b/porfolio/template/space/proyecto.html
@@ -48,7 +48,8 @@
                             <div class="conteiner-main-proyecto">
                                 <div class="titulo-proyecto">Links</div>
                                 <div class="conteiner-button-proyecto">
-                                    <a class="button-proyecto" href="https://github.com/horacio-a/Criptoword-front">Link a github</a>
+                                    <a class="button-proyecto" href="https://github.com/horacio-a/Criptoword-front">Link
+                                        a github</a>
                                     <a class="button-proyecto" href="http://criptoword.com.ar">Link a la web</a>
                                 </div>
                             </div>
@@ -93,8 +94,10 @@
                             <div class="conteiner-main-proyecto">
                                 <div class="titulo-proyecto">Links</div>
                                 <div class="conteiner-button-proyecto">
-                                    <a class="button-proyecto" href="https://github.com/horacio-a/Espacio-bonhomia">Link a github</a>
-                                    <a class="button-proyecto" href="https://espacio-bonhomia.herokuapp.com">Link a la web</a>
+                                    <a class="button-proyecto" href="https://github.com/horacio-a/Espacio-bonhomia">Link
+                                        a github</a>
+                                    <a class="button-proyecto" href="https://espacio-bonhomia.herokuapp.com">Link a la
+                                        web</a>
                                 </div>
                             </div>
 
@@ -130,8 +133,11 @@
                             <div class="conteiner-main-proyecto">
                                 <div class="titulo-proyecto">Links</div>
                                 <div class="conteiner-button-proyecto">
-                                    <a class="button-proyecto" href="https://github.com/horacio-a/calculadora-extencion">Link a github</a>
-                                    <a class="button-proyecto" href="https://chrome.google.com/webstore/detail/calculadora/bejdbiknjfcgcllbcfgamogcefnojoak?hl=es&authuser=0">Link a la web</a>
+                                    <a class="button-proyecto"
+                                        href="https://github.com/horacio-a/calculadora-extencion">Link a github</a>
+                                    <a class="button-proyecto"
+                                        href="https://chrome.google.com/webstore/detail/calculadora/bejdbiknjfcgcllbcfgamogcefnojoak?hl=es&authuser=0">Link
+                                        a la web</a>
                                 </div>
                             </div>
 
@@ -141,7 +147,8 @@
                         <div class="proyecto1">
                             <div class="conteiner-main-proyecto">
                                 <div class="titulo-proyecto">Chat Priv</div>
-                                <div><img src='{% static "imagenes/space/Logo-chat-priv.png" %}' alt="" width="25%"></div>
+                                <div><img src='{% static "imagenes/space/Logo-chat-priv.png" %}' alt="" width="25%">
+                                </div>
                             </div>
                             <div class="conteiner-main-proyecto">
                                 <div class="titulo-proyecto"> Construida con</div>
@@ -209,18 +216,18 @@
                                 <div class="titulo-proyecto"> Construida con</div>
                                 <div class="tecnologias-construccion">
                                     <img class="imagane-icon-habilidades html"
-                                        src='{% static "imagenes/space/ic-html.png" %}' >
+                                        src='{% static "imagenes/space/ic-html.png" %}'>
                                     <img class="imagane-icon-habilidades css"
-                                        src='{% static "imagenes/space/ic-css.png" %}' >
+                                        src='{% static "imagenes/space/ic-css.png" %}'>
                                     <img class="imagane-icon-habilidades bootstrap"
-                                        src='{% static "imagenes/space/ic-js.png" %}' >
+                                        src='{% static "imagenes/space/ic-js.png" %}'>
                                 </div>
 
                                 <div class="tecnologias-construccion">
                                     <img class="imagane-icon-habilidades react"
                                         src='{% static "imagenes/space/ic-react.png" %}'>
                                     <img class="imagane-icon-habilidades nodejs"
-                                        src='{% static "imagenes/space/nodejs.png" %}' >
+                                        src='{% static "imagenes/space/nodejs.png" %}'>
                                 </div>
 
 
@@ -228,7 +235,8 @@
                             <div class="conteiner-main-proyecto links">
                                 <div class="titulo-proyecto">Links</div>
                                 <div class="conteiner-button-proyecto">
-                                    <a class="button-proyecto" href="https://github.com/horacio-a/Criptoword-front">Link a github</a>
+                                    <a class="button-proyecto" href="https://github.com/horacio-a/Criptoword-front">Link
+                                        a github</a>
                                     <a class="button-proyecto" href="http://criptoword.com.ar">Link a la web</a>
                                 </div>
                             </div>
@@ -244,27 +252,29 @@
                                 <div class="titulo-proyecto"> Construida con</div>
                                 <div class="tecnologias-construccion">
                                     <img class="imagane-icon-habilidades html"
-                                        src='{% static "imagenes/space/ic-html.png" %}' >
+                                        src='{% static "imagenes/space/ic-html.png" %}'>
                                     <img class="imagane-icon-habilidades css"
-                                        src='{% static "imagenes/space/ic-css.png" %}' >
+                                        src='{% static "imagenes/space/ic-css.png" %}'>
                                     <img class="imagane-icon-habilidades bootstrap"
-                                        src='{% static "imagenes/space/ic-js.png" %}' >
+                                        src='{% static "imagenes/space/ic-js.png" %}'>
                                 </div>
 
                                 <div class="tecnologias-construccion">
 
                                     <img class="imagane-icon-habilidades python"
-                                        src='{% static "imagenes/space/python.png" %}' >
+                                        src='{% static "imagenes/space/python.png" %}'>
                                     <img class="imagane-icon-habilidades django"
-                                        src='{% static "imagenes/space/django.jpg" %}' >
+                                        src='{% static "imagenes/space/django.jpg" %}'>
 
                                 </div>
                             </div>
                             <div class="conteiner-main-proyecto links">
                                 <div class="titulo-proyecto">Links</div>
                                 <div class="conteiner-button-proyecto">
-                                    <a class="button-proyecto" href="https://github.com/horacio-a/Espacio-bonhomia">Link a github</a>
-                                    <a class="button-proyecto" href="https://espacio-bonhomia.herokuapp.com">Link a la web</a>
+                                    <a class="button-proyecto" href="https://github.com/horacio-a/Espacio-bonhomia">Link
+                                        a github</a>
+                                    <a class="button-proyecto" href="https://espacio-bonhomia.herokuapp.com">Link a la
+                                        web</a>
                                 </div>
                             </div>
 
@@ -280,9 +290,9 @@
                                 <div class="titulo-proyecto"> Construida con</div>
                                 <div class="tecnologias-construccion">
                                     <img class="imagane-icon-habilidades html"
-                                        src='{% static "imagenes/space/ic-html.png" %}' >
+                                        src='{% static "imagenes/space/ic-html.png" %}'>
                                     <img class="imagane-icon-habilidades bootstrap"
-                                        src='{% static "imagenes/space/ic-js.png" %}' >
+                                        src='{% static "imagenes/space/ic-js.png" %}'>
                                     <img class="imagane-icon-habilidades css"
                                         src='{% static "imagenes/space/ic-css.png" %}'>
                                 </div>
@@ -290,8 +300,11 @@
                             <div class="conteiner-main-proyecto links">
                                 <div class="titulo-proyecto">Links</div>
                                 <div class="conteiner-button-proyecto">
-                                    <a class="button-proyecto" href="https://github.com/horacio-a/calculadora-extencion">Link a github</a>
-                                    <a class="button-proyecto" href="https://chrome.google.com/webstore/detail/calculadora/bejdbiknjfcgcllbcfgamogcefnojoak?hl=es&authuser=0">Link a la web</a>
+                                    <a class="button-proyecto"
+                                        href="https://github.com/horacio-a/calculadora-extencion">Link a github</a>
+                                    <a class="button-proyecto"
+                                        href="https://chrome.google.com/webstore/detail/calculadora/bejdbiknjfcgcllbcfgamogcefnojoak?hl=es&authuser=0">Link
+                                        a la web</a>
                                 </div>
                             </div>
 
@@ -301,24 +314,25 @@
                         <div class="proyecto1">
                             <div class="conteiner-main-proyecto" style="margin-top: 1vh;">
                                 <div class="titulo-proyecto">Chat priv</div>
-                                <div><img src='{% static "imagenes/space/Logo-chat-priv.png" %}' alt="" width="25%"></div>
+                                <div><img src='{% static "imagenes/space/Logo-chat-priv.png" %}' alt="" width="25%">
+                                </div>
                             </div>
                             <div class="conteiner-main-proyecto">
                                 <div class="titulo-proyecto"> Construida con</div>
                                 <div class="tecnologias-construccion">
                                     <img class="imagane-icon-habilidades html"
-                                        src='{% static "imagenes/space/ic-html.png" %}' >
+                                        src='{% static "imagenes/space/ic-html.png" %}'>
                                     <img class="imagane-icon-habilidades bootstrap"
-                                        src='{% static "imagenes/space/ic-js.png" %}' >
+                                        src='{% static "imagenes/space/ic-js.png" %}'>
                                     <img class="imagane-icon-habilidades css"
                                         src='{% static "imagenes/space/ic-css.png" %}'>
                                 </div>
                                 <div class="tecnologias-construccion">
                                     <img class="imagane-icon-habilidades html"
-                                        src='{% static "imagenes/space/socketio.png" %}' >
+                                        src='{% static "imagenes/space/socketio.png" %}'>
                                     <img class="imagane-icon-habilidades bootstrap"
-                                        src='{% static "imagenes/space/nodejs.png" %}' >
-                                    
+                                        src='{% static "imagenes/space/nodejs.png" %}'>
+
                                 </div>
                             </div>
                             <div class="conteiner-main-proyecto links">
@@ -333,7 +347,7 @@
                     </div>
                 </div>
             </div>
-            <img class="next-movil button-carrosel" src='{% static "imagenes/space/abajo.png" %}' height="25vh" ></img>
+            <img class="next-movil button-carrosel" src='{% static "imagenes/space/abajo.png" %}' height="25vh"></img>
 
         </section>
 
