--- a/porfolio/template/space/proyecto.html
+++ b/porfolio/template/space/proyecto.html
@@ -48,9 +48,11 @@
                             <div class="conteiner-main-proyecto">
                                 <div class="titulo-proyecto">Links</div>
                                 <div class="conteiner-button-proyecto">
-                                    <a class="button-proyecto" href="https://github.com/horacio-a/Criptoword-front">Link
+                                    <a class="button-proyecto" target="_blank"
+                                        href="https://github.com/horacio-a/Criptoword-front">Link
                                         a github</a>
-                                    <a class="button-proyecto" href="http://criptoword.com.ar">Link a la web</a>
+                                    <a class="button-proyecto" target="_blank" href="http://criptoword.com.ar">Link a la
+                                        web</a>
                                 </div>
                             </div>
                         </div>
@@ -94,9 +96,11 @@
                             <div class="conteiner-main-proyecto">
                                 <div class="titulo-proyecto">Links</div>
                                 <div class="conteiner-button-proyecto">
-                                    <a class="button-proyecto" href="https://github.com/horacio-a/Espacio-bonhomia">Link
+                                    <a class="button-proyecto" target="_blank"
+                                        href="https://github.com/horacio-a/Espacio-bonhomia">Link
                                         a github</a>
-                                    <a class="button-proyecto" href="https://espacio-bonhomia.herokuapp.com">Link a la
+                                    <a class="button-proyecto" target="_blank"
+                                        href="https://espacio-bonhomia.herokuapp.com">Link a la
                                         web</a>
                                 </div>
                             </div>
@@ -133,9 +137,9 @@
                             <div class="conteiner-main-proyecto">
                                 <div class="titulo-proyecto">Links</div>
                                 <div class="conteiner-button-proyecto">
-                                    <a class="button-proyecto"
+                                    <a class="button-proyecto" target="_blank"
                                         href="https://github.com/horacio-a/calculadora-extencion">Link a github</a>
-                                    <a class="button-proyecto"
+                                    <a class="button-proyecto" target="_blank"
                                         href="https://chrome.google.com/webstore/detail/calculadora/bejdbiknjfcgcllbcfgamogcefnojoak?hl=es&authuser=0">Link
                                         a la web</a>
                                 </div>
@@ -183,8 +187,59 @@
                             <div class="conteiner-main-proyecto">
                                 <div class="titulo-proyecto">Links</div>
                                 <div class="conteiner-button-proyecto">
-                                    <a class="button-proyecto">Link a github</a>
-                                    <a class="button-proyecto">Link a la web</a>
+                                    <a class="button-proyecto" target="_blank"
+                                        href="https://chat-priv.herokuapp.com">Link a github</a>
+                                    <a class="button-proyecto" target="_blank"
+                                        href="https://github.com/horacio-a/Chat-en-tiempo-real">Link a la web</a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="slider-slide">
+                        <div class="proyecto1">
+                            <div class="conteiner-main-proyecto">
+                                <div class="titulo-proyecto">NextChange</div>
+                                <div><img src='{% static "imagenes/space/NextChange.png" %}' alt="" width="25%">
+                                </div>
+                            </div>
+                            <div class="conteiner-main-proyecto">
+                                <div class="titulo-proyecto"> Construida con</div>
+                                <div class="tecnologias-construccion">
+                                    <div class="icon-habilidades">
+                                        <span class="tooltip">HTML</span>
+                                        <span><img class="imagane-icon-habilidades html"
+                                                src='{% static "imagenes/space/ic-html.png" %}' height="1.5vh"></span>
+                                    </div>
+                                    <div class="icon-habilidades">
+                                        <span class="tooltip">CSS</span>
+                                        <span><img class="imagane-icon-habilidades css"
+                                                src='{% static "imagenes/space/ic-css.png" %}' height="50%"></span>
+                                    </div>
+                                    <div class="icon-habilidades">
+                                        <span class="tooltip">JavaScript</span>
+                                        <span><img class="imagane-icon-habilidades bootstrap"
+                                                src='{% static "imagenes/space/ic-js.png" %}' height="50%"></span>
+                                    </div>
+                                    <div class="icon-habilidades">
+                                        <span class="tooltip">React.js</span>
+                                        <span><img class="imagane-icon-habilidades bootstrap"
+                                                src='{% static "imagenes/space/ic-react.png" %}' height="50%"></span>
+                                    </div>
+                                    <div class="icon-habilidades">
+                                        <span class="tooltip">nODE.JS</span>
+                                        <span><img class="imagane-icon-habilidades nodejs"
+                                                src='{% static "imagenes/space/nodejs.png" %}'></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="conteiner-main-proyecto">
+                                <div class="titulo-proyecto">Links</div>
+                                <div class="conteiner-button-proyecto">
+                                    <a class="button-proyecto" target="_blank"
+                                        href="https://github.com/horacio-a/Next-Change-Front">Link a github</a>
+                                    <a class="button-proyecto" target="_blank"
+                                        href="https://next-change.herokuapp.com">Link a la web</a>
                                 </div>
                             </div>
 
