agrege un nuevo proyecto en mobil

--- a/porfolio/template/space/proyecto.html
+++ b/porfolio/template/space/proyecto.html
@@ -107,7 +107,6 @@
 
                         </div>
                     </div>
-
                     <div class="slider-slide">
                         <div class="proyecto1">
                             <div class="conteiner-main-proyecto">
@@ -398,6 +397,42 @@
                                 </div>
                             </div>
 
+                        </div>
+                    </div>
+                    <div class="slider-slide-movil">
+                        <div class="proyecto1">
+                            <div class="conteiner-main-proyecto" style="margin-top: 1vh;">
+                                <div class="titulo-proyecto">NextChange</div>
+                                <div><img src='{% static "imagenes/space/NextChange.png" %}' alt="" width="25%">
+                                </div>
+                            </div>
+                            <div class="conteiner-main-proyecto">
+                                <div class="titulo-proyecto"> Construida con</div>
+                                <div class="tecnologias-construccion">
+                                    <img class="imagane-icon-habilidades html"
+                                        src='{% static "imagenes/space/ic-html.png" %}'>
+                                    <img class="imagane-icon-habilidades bootstrap"
+                                        src='{% static "imagenes/space/ic-js.png" %}'>
+                                    <img class="imagane-icon-habilidades css"
+                                        src='{% static "imagenes/space/ic-css.png" %}'>
+                                </div>
+                                <div class="tecnologias-construccion">
+                                    <img class="imagane-icon-habilidades html"
+                                        src='{% static "imagenes/space/ic-react.png" %}'>
+                                    <img class="imagane-icon-habilidades bootstrap"
+                                        src='{% static "imagenes/space/nodejs.png" %}'>
+
+                                </div>
+                            </div>
+                            <div class="conteiner-main-proyecto links">
+                                <div class="titulo-proyecto">Links</div>
+                                <div class="conteiner-button-proyecto">
+                                    <a class="button-proyecto" target="_blank"
+                                        href="https://github.com/horacio-a/Next-Change-Front">Link a github</a>
+                                    <a class="button-proyecto" target="_blank"
+                                        href="https://next-change.herokuapp.com">Link a la web</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
