agrege un proyecto movil

--- a/porfolio/static/css/index.css
+++ b/porfolio/static/css/index.css
@@ -426,6 +426,12 @@
         transform: translate(-50%);
     }
 
+    
+    #icon-NextChange {
+        position: relative;
+        transform: translate(-50%);
+    }
+
     .detalles {
         position: relative;
         transform: translate(50%);
