--- a/porfolio/template/eyes/proyectos.html
+++ b/porfolio/template/eyes/proyectos.html
@@ -411,10 +411,40 @@ Mis proyectos
             </div>
             <img src='{% static "imagenes/eyes//Logo-chat-priv.png" %}' height="100%" id="icon-Chat" />
         </div>
+        <div class="bloque-proyecto">
+            <div class="detalles" id="detalleNextChange">
+                <div class="titulo-mask" style=" font-size: 1.5vh ; ">
+                    Next Change
+                </div>
+                <div class="conjunto-botones">
+                    <button type="button" class="boton-proyectos" id="botonNext1Movil"
+                        onclick="tecnologiasNextChangeMovil()">
+                        Construida en...
+                    </button>
+                    <button class="boton-proyectos" id="botonNext2Movil" onclick="proyectoNextChangeMovil()">
+                        Ver el Proyecto
+                    </button>
+                    <a href="https://github.com/horacio-a/Chat-en-tiempo-real" class="boton-proyectos"
+                        id="botonNext4Movil" style="display: none;">github</a>
+                    <a href="https://chat-priv.herokuapp.com" class="boton-proyectos" id="botonNext5Movil"
+                        style="display: none;">ver en la web</a>
+                    <div class="estructurabotones" id="BotonesNext1Movil">
+                        <div class="miniboton-proyectos"> HTML</div>
+                        <div class="miniboton-proyectos"> CSS</div>
+                    </div>
+                    <div class="estructurabotones" id="BotonesNext2Movil">
+                        <div class="miniboton-proyectos"> node.js</div>
+                        <div class="miniboton-proyectos"> React.js </div>
+                    </div>
 
+                    <div class="miniboton-proyectos poniter" id="botonNext3Movil" onclick="aparecerNextChangeMovil()"
+                        style="display: none;"> Volver</div>
+                </div>
+            </div>
+            <img src='{% static "imagenes/eyes/nextchange.png" %}' height="100%" id="icon-NextChange" />
+        </div>
 
     </div>
-
 </main>
 
 {% endblock %}
